--- a/config.json
+++ b/config.json
@@ -44,3 +44,55 @@ LAST 24 HOURS
 
 # Order results
 ORDER BY "Time" DESC
+---
+// Event Search Query
+event_platform=win event_simpleName=UserLogon 
+AuthenticationPackage=NTLM 
+LogonType=3
+| stats count(aid) as host_count, values(UserName) as usernames, 
+  values(ComputerName) as source_computers by RemoteIP
+| where host_count > 3
+
+// Advanced FQL Detection Rule
+index=main event_platform=win event_simpleName=UserLogon
+    [search event_platform=win event_simpleName=ProcessRollup2 
+    ChildProcess IN ("mimikatz.exe", "pwdump*.exe", "wce.exe", "procdump.exe")
+    | fields aid ComputerName]
+AND LogonType=3
+AND AuthenticationPackage=NTLM
+| stats count(aid) as authentication_count, 
+    values(UserName) as affected_users,
+    values(ComputerName) as source_hosts,
+    values(RemoteIP) as remote_ips
+    by aid, UserName
+| where authentication_count >= 2
+
+// Real-time Detection Rule (Custom IOA)
+// Detecting multiple NTLM authentications from single source
+AND ComputerName IN 
+    (SELECT ComputerName
+     FROM YOUR_EVENT_LOG_SOURCE
+     WHERE event_simpleName=UserLogon
+     AND AuthenticationPackage=NTLM
+     GROUP BY ComputerName
+     HAVING COUNT(DISTINCT TargetUserName) > threshold_value)
+
+// Additional Indicators
+AND (
+    // Look for known PTH tools
+    FileName IN ("mimikatz.exe", "pwdump*.exe", "wce.exe", "procdump.exe")
+    OR 
+    // Command line arguments indicative of hash extraction
+    CommandLine CONTAINS("-dumpcreds", "sekurlsa::", "hashdump")
+    OR
+    // Suspicious service creation related to PTH
+    event_simpleName=ServiceStarted AND 
+    ServiceName IN ("WCESERVICE", "RPCSS")
+)
+
+// Behavioral Patterns
+AND (
+    // Multiple logons in short timeframe
+    | stats count(aid) as logon_count by aid, UserName, span(timestamp, 5m)
+    | where logon_count > 5
+)
